fix build instructions for JRE 9+ and Travis CI